# ETHZ-RobotX-rss-workspace

src/hardware/smb_powerstatus/: .gitignore  CMakeLists.txt  README.md  package.xml
src/hardware/smb_powerstatus/.github/workflows/: smb_power_package.yaml
src/hardware/smb_powerstatus/config/: base_battery_status.yaml
src/hardware/smb_powerstatus/firmware/: 98-smb-power.rules
src/hardware/smb_powerstatus/firmware/libraries/smb_libraries/: LTC3219.cpp  LTC3219.h  TCA9554.cpp  TCA9554.hpp
src/hardware/smb_powerstatus/firmware/smb_powerstatus/: smb_powerstatus.h  smb_powerstatus.ino
src/hardware/smb_powerstatus/launch/: smb_powerstatus.launch
src/hardware/smb_powerstatus/msg/: SMBPowerStatus.msg
src/hardware/smb_powerstatus/src/: base_battery_status.py
src/lib/libnabo/: CMakeLists.txt  CatkinBuild.cmake  Doxyfile.in  package.xml
src/lib/libnabo/nabo/: brute_force_cpu.cpp  index_heap.h  kdtree_cpu.cpp
src/se/graph_msf/examples/anymal_estimator_graph/: CMakeLists.txt  README.md  package.xml
src/se/graph_msf/examples/anymal_estimator_graph/config/anymal_specific/: anymal_extrinsic_params.yaml  anymal_gnss_params.yaml  anymal_graph_params.yaml  anymal_traj_align_params.yaml
src/se/graph_msf/examples/anymal_estimator_graph/config/core/: core_extrinsic_params.yaml  core_graph_config.yaml  core_graph_params.yaml
src/se/graph_msf/examples/anymal_estimator_graph/config/dumped_params_d/: 2023-01-13-16-27-14_anymal-d020-lpc_mission.yaml
src/se/graph_msf/examples/anymal_estimator_graph/config/elevation_mapping/: vlp16.yaml
src/se/graph_msf/examples/anymal_estimator_graph/include/anymal_estimator_graph/: AnymalEstimator.h  AnymalStaticTransforms.h  constants.h
src/se/graph_msf/examples/anymal_estimator_graph/launch/: anymal_estimator_graph.launch  anymal_estimator_graph_replay.launch  anymal_estimator_graph_replay_with_compslam.launch  anymal_estimator_graph_replay_with_o3d_slam.launch
src/se/graph_msf/examples/anymal_estimator_graph/rviz/: gnss_lidar.rviz
src/se/graph_msf/examples/anymal_estimator_graph/src/: anymal_estimator_node.cpp
src/se/graph_msf/examples/anymal_estimator_graph/src/lib/: AnymalEstimator.cpp  AnymalStaticTransforms.cpp  readParams.cpp
src/se/graph_msf/examples/gtsam_tryout_examples/: CMakeLists.txt  package.xml
src/se/graph_msf/examples/gtsam_tryout_examples/src/: alignment_tryout_main.cpp  fixed_lag_smoother_invalid_key_main.cpp
src/se/graph_msf/examples/imu_pose3_fuser/: CMakeLists.txt  package.xml
src/se/graph_msf/examples/imu_pose3_fuser/config/core/: core_extrinsic_params.yaml  core_graph_config.yaml  core_graph_params.yaml
src/se/graph_msf/examples/imu_pose3_fuser/config/specific/: imu_pose3_fuser_params.yaml
src/se/graph_msf/examples/imu_pose3_fuser/include/imu_pose3_fuser/: ImuPose3Fuser.h  constants.h
src/se/graph_msf/examples/imu_pose3_fuser/launch/: imu_pose3_fuser.launch  imu_pose3_fuser_replay.launch
src/se/graph_msf/examples/imu_pose3_fuser/rviz/: estimation.rviz
src/se/graph_msf/examples/imu_pose3_fuser/src/: imu_pose3_fuser_node.cpp
src/se/graph_msf/examples/imu_pose3_fuser/src/lib/: ImuPose3Fuser.cpp  readParams.cpp
src/se/graph_msf/graph_msf/: CMakeLists.txt  package.xml
src/se/graph_msf/graph_msf/include/graph_msf/config/: GraphConfig.h  StaticTransforms.h
src/se/graph_msf/graph_msf/include/graph_msf/core/: Datatypes.hpp  GraphManager.hpp  GraphManager.inl  GraphState.hpp  TimeGraphKeyBuffer.h  TransformsDictionary.h  TransformsExpressionKeys.h
src/se/graph_msf/graph_msf/include/graph_msf/geometry/: Pose.h  Trajectory.h
src/se/graph_msf/graph_msf/include/graph_msf/gnss/: Gnss.h  GnssHandler.h
src/se/graph_msf/graph_msf/include/graph_msf/imu/: ImuBuffer.hpp  ImuSignalLowPassFilter.hpp
src/se/graph_msf/graph_msf/include/graph_msf/interface/: DualGraphMsf.h  GraphMsf.h  NavState.h  Terminal.h  constants.h
src/se/graph_msf/graph_msf/include/graph_msf/measurements/: BinaryMeasurement.h  BinaryMeasurementXD.h  Measurement.h  UnaryMeasurement.h  UnaryMeasurementXD.h
src/se/graph_msf/graph_msf/include/graph_msf/trajectory_alignment/: TrajectoryAlignment.h  TrajectoryAlignmentHandler.h
src/se/graph_msf/graph_msf/src/lib/: DualGraphMsf.cpp  GnssHandler.cpp  GraphManager.cpp  GraphMsf.cpp  ImuBuffer.cpp  NavState.cpp  TimeGraphKeyBuffer.cpp  TrajectoryAlignment.cpp  TrajectoryAlignmentHandler.cpp
src/se/graph_msf/ros/graph_msf_ros/: CMakeLists.txt  package.xml
src/se/graph_msf/ros/graph_msf_ros/config/: core_extrinsic_params.yaml  core_graph_config.yaml  core_graph_params.yaml
src/se/graph_msf/ros/graph_msf_ros/include/graph_msf_ros/: GraphMsfRos.h  constants.h
src/se/graph_msf/ros/graph_msf_ros/scripts/: convert_pose_files_to_tf_and_odom_bag.py  remove_map_and_odom_from_bag.py  remove_tf_from_bag.py
src/se/graph_msf/ros/graph_msf_ros/srv/: OfflineOptimizationTrigger.srv
src/se/graph_msf/ros/graph_msf_ros_msgs/: CMakeLists.txt  package.xml
src/se/graph_msf/ros/graph_msf_ros_msgs/msg/: Wgs84Coordinate.msg
src/se/graph_msf/ros/graph_msf_ros_msgs/srv/: GetPathInEnu.srv
src/se/graph_msf/ros/tf_replay/: CMakeLists.txt  package.xml
src/se/graph_msf/ros/tf_replay/launch/: replay.launch
src/se/graph_msf/ros/tf_replay/rviz/: replay.rviz
src/se/graph_msf/ros/tf_replay/src/: tf_publisher_node.cpp
src/ui/smb_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/ui/smb_rviz_plugins/.github/workflows/: build.yml
src/ui/smb_rviz_plugins/include/smb_control/: smb_control_panel.hpp
src/ui/smb_rviz_plugins/include/smb_power_motor/: smb_batt_mot_panel.hpp  smb_pow_mot_display.hpp
src/ui/smb_rviz_plugins/include/smb_power_payload/: smb_batt_pay_panel.hpp  smb_plug_pay_panel.hpp  smb_pow_pay_display.hpp
src/ui/smb_rviz_plugins/resources/: resources.qrc
src/ui/smb_rviz_plugins/src/smb_control/: smb_control_panel.cpp
src/ui/smb_rviz_plugins/src/smb_power_motor/: smb_batt_mot_panel.cpp  smb_pow_mot_display.cpp
src/ui/smb_rviz_plugins/src/smb_power_payload/: smb_batt_pay_panel.cpp  smb_plug_pay_panel.cpp  smb_pow_pay_display.cpp
(+348 files in other folders)
