<?xml version="1.0"?>
<package format="2">
  <name>smb_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The smb_rviz_plugins package contains a few plugins specific for the SuperMegaBot</description>
  <maintainer email="dbaret@student.ethz.ch">Davide Baret</maintainer>

  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>smb_powerstatus</build_depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>smb_powerstatus</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
