<?xml version="1.0"?>
<package format="2">
    <name>graph_msf_ros</name>
    <version>0.0.0</version>

    <description>
        State estimation based on factor graphs, utilizing GTSAM functionality. Fusion of IMU, LiDAR Mapping Odometry
        and GNSS estimates.
    </description>

    <maintainer email="nubertj@ethz.ch">Julian Nubert</maintainer>
    <license>BSD</license>
    <author email="nubertj@ethz.ch">Julian Nubert</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>graph_msf</build_depend>
    <build_depend>kdl_parser</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>graph_msf</exec_depend>
    <exec_depend>kdl_parser</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <test_depend>rostest</test_depend>
    <test_depend>rosbag</test_depend>

</package>
