<?xml version="1.0"?>
<package format="2">
  <name>graph_msf_ros_msgs</name>
  <version>1.0.0</version>
  <description>Messages used by graph_msf</description>

  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/compslam_se</url>
  <maintainer email="waibelg@leggedrobotics.com">Gabriel Waibel</maintainer>
  <author email="waibelg@leggedrobotics.com">Gabriel Waibel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>

</package>
